--- a/Index.html
+++ b/Index.html
@@ -15,12 +15,19 @@
             <p class="descripción">La arepa es un plato emblemático de la gastronomía venezolana, un alimento que ha trascendido fronteras y conquistado paladares alrededor del mundo. Esta delicia culinaria es una especie de pan redondo y plano, elaborado a partir de masa de maíz molido o de harina de maíz precocida.</p>
         <article class="descripción2">
             
-            <p class="articulo">activoooooo</p>
+            <p class="articulo"> 
+                800 gramos de harina de maíz
+                500 mililitros de agua
+                1 cucharadita de sal
+                1 cucharadita de aceite
+                Queso en lonchas</p>
 
 
             
         </article>
-
+             <img src="Img/istockphoto-1008389336-612x612.jpg" alt="">
+             <h1>Cachapa</h1>
+             <p class="descripción">Es una especie de panqueque grueso elaborado principalmente con maíz fresco. Su textura suave y su sabor ligeramente dulce la hacen irresistible para los amantes de la comida. También se puede disfrutar con otros acompañamientos como jamón, cochino frito (cerdo frito), carne mechada, palta o incluso solas.</p>
 
 
 
