--- a/Index.html
+++ b/Index.html
@@ -15,12 +15,8 @@
             <p class="descripción">La arepa es un plato emblemático de la gastronomía venezolana, un alimento que ha trascendido fronteras y conquistado paladares alrededor del mundo. Esta delicia culinaria es una especie de pan redondo y plano, elaborado a partir de masa de maíz molido o de harina de maíz precocida.</p>
         <article class="descripción2">
             
-            <p class="articulo"> 
-                800 gramos de harina de maíz
-                500 mililitros de agua
-                1 cucharadita de sal
-                1 cucharadita de aceite
-                Queso en lonchas</p>
+            <p class="articulo"> yes
+            </p>
 
 
             
