--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,8 @@
                 <h3>Tiempo De Preparacion</h3>
 
                 <li> total: Aproximado </li>
-                <li> 2</li>
+                <li> Preparacion:</li>
+                <li> Cocinado:</li>
             </div>
             
 
